Fixing animation on safari mobile

--- a/Sources/Components/EducationSection/educationSectionStyle.css
+++ b/Sources/Components/EducationSection/educationSectionStyle.css
@@ -59,6 +59,6 @@
 @media only screen and (max-width: 600px) {
 
     .educationItemContainer {
-        width: calc(100% - 20px);
+         width: calc(100% - (20px + 32px));
     }
 }
