--- a/Sources/Components/LanguageSection/languageSectionStyles.css
+++ b/Sources/Components/LanguageSection/languageSectionStyles.css
@@ -18,7 +18,6 @@
 
 
 .languageItem {
-    margin-right: 14px;
     color: dimgrey;
     margin-bottom: 32px;
     margin-left: 32px;
